fix: env issues
